[package]
name = "kvs"
version = "0.1.0"
authors = ["Aiwa Misaki <zyxwhisper@gmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
predicates = "3.1.3"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
thiserror = "2.0.9"
serde_json = "1.0.134"
serde = "1.0.217"
buffered_offset_reader = "0.6.0"
log = "0.4.22"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"